--- a/index.html
+++ b/index.html
@@ -167,12 +167,18 @@
                                 <img src="./assets/images/icons/Google-Play-Store-Button.png" alt="Google Play" style="width: 100%;"/>
                             </a>
                         </div>
+                        
                     </div>
                     <div class="slider-img">
                         <img src="./assets/images/CraftRunner/Banner 1024x500-2.jpg" alt="Craft Runner" style="width: 100%;">
                         <div class="slider-button">
                             <a href="https://play.google.com/store/apps/details?id=com.lta.craftrunner.moneyrun3d" target="_blank">
                                 <img src="./assets/images/icons/Google-Play-Store-Button.png" alt="Google Play" style="width: 100%;"/>
+                            </a>
+                        </div>
+                        <div class="slider-button">
+                            <a href="https://apps.apple.com/us/app/craft-runner-money-run-3d/id1669324547" target="_blank">
+                                <img src="./assets/images/icons/App-Store-Button.png" alt="App Store" style="width: 100%;"/>
                             </a>
                         </div>
                     </div>
