--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -134,19 +134,19 @@
             <div class="header-logo">
                 <img src="./assets/images/icons/Icon logo LTA.png" alt="LTA" style="width: 100%; height: 100%;">
             </div>
-            <h3 class="header-title">Privacy Policy</h3>
+            <h3 class="header-title">Luster To Alive - Privacy Policy</h3>
         </div>    
         
         <div class="box mb-3">
             <div class="box-help-icon"><i class="ti-help-alt"></i></div>
-            <h3 class="box-title">ABOUT LTA GAMES STUDIO</h3>
+            <h3 class="box-title">ABOUT LUSTER TO ALIVE STUDIO</h3>
             <p class="box-text mb-2">
-                LTA GAMES STUDIO is the developer, operator and publisher of games, apps mobile, in various platforms and devices. 
+                LUSTER TO ALIVE STUDIO is the developer, operator and publisher of games, apps mobile, in various platforms and devices. 
                 The Company operates, among others, the mobile applications for both Android and IOS of the games: Sky Raptor, Super Bino,
                 Mano, Solar Squad, Dino Fun..., and also the website: https://support.lta-indie.com/
             </p>
             <p class="box-text mb-2">
-                LTA GAMES STUDIO take the protection of your personal data very seriously and strictly abide by the regulations 
+                LUSTER TO ALIVE STUDIO take the protection of your personal data very seriously and strictly abide by the regulations 
                 of the world data protection act. Personal data will only be collected to an extent that is technically required. In 
                 no case this data will be sold or passed on to third parties for any other reasons.
             </p>
@@ -171,7 +171,7 @@
             <div class="box-help-icon"><i class="ti-help-alt"></i></div>
             <h3 class="box-title">DOES THE APPLICATION COLLECT PRECISE REAL TIME LOCATION INFORMATION OF THE DEVICE?</h3>
             <p class="box-text">
-                This Application does not collect precise information about the location of your mobile device. if LTA GAMES STUDIO is 
+                This Application does not collect precise information about the location of your mobile device. if LUSTER TO ALIVE STUDIO is 
                 involved in a merger, acquisition, or sale of all or a portion of its assets, you will be notified via email and/or a 
                 prominent notice on our Web site of any change in ownership or uses of this information, as well as any choices you.
             </p>
@@ -244,11 +244,11 @@
             <div class="box-help-icon"><i class="ti-help-alt"></i></div>
             <h3 class="box-title">DATA DELETION REQUEST</h3>
             <p class="box-text mb-2">
-                You may request LTA Game Studio to erase without undue delay your personal data when it is no longer necessary for 
-                LTA Game Studio to retain such data.
+                You may request Luster To Alive Studio to erase without undue delay your personal data when it is no longer necessary for 
+                Luster To Alive Studio to retain such data.
             </p>
             <p class="box-text">
-                In order for your data to be erased you can contact LTA Game Studio by lta@lta-indie.com with request.
+                In order for your data to be erased you can contact Luster To Alive Studio by lta@lta-indie.com with request.
             </p>
         </div>
 
