--- a/index.html
+++ b/index.html
@@ -139,12 +139,9 @@
                 <a href="/">
                     <img class="logo" src="//img1.wsimg.com/isteam/ip/68acfcdc-2dfc-4741-9e81-237beb47bb8d/Icon%20logo%20LTA.png/:/rs=h:74,cg:true,m/qt=q:100/ll" srcset="//img1.wsimg.com/isteam/ip/68acfcdc-2dfc-4741-9e81-237beb47bb8d/Icon%20logo%20LTA.png/:/rs=w:74,h:74,cg:true,m/cr=w:74,h:74/qt=q:100/ll, //img1.wsimg.com/isteam/ip/68acfcdc-2dfc-4741-9e81-237beb47bb8d/Icon%20logo%20LTA.png/:/rs=w:148,h:148,cg:true,m/cr=w:148,h:148/qt=q:100/ll 2x, //img1.wsimg.com/isteam/ip/68acfcdc-2dfc-4741-9e81-237beb47bb8d/Icon%20logo%20LTA.png/:/rs=w:223,h:222,cg:true,m/cr=w:223,h:222/qt=q:100/ll 3x" alt="LTA">
                 </a>
-                <div class="text-center mt-5">
-                    <h1 class="font-large">CÔNG TY TNHH LUSTER TO ALIVE</h1>
-                    <hr class="hr-sm"/>
-                </div>
                 
                 <div class="nav-items">
+                    <a class="font-large">CÔNG TY TNHH LUSTER TO ALIVE</a>
                     <a href="#games" class="mobile-menu-nav-item">games</a>
                     <a href="#apps" class="mobile-menu-nav-item">apps</a>
                     <a href="#about" class="mobile-menu-nav-item">about</a>
