--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
                 </a>
                 
                 <div class="nav-items">
-                    <a class="font-large">CÔNG TY TNHH LUSTER TO ALIVE</a>
                     <a href="#games" class="mobile-menu-nav-item">games</a>
                     <a href="#apps" class="mobile-menu-nav-item">apps</a>
                     <a href="#about" class="mobile-menu-nav-item">about</a>
@@ -165,13 +164,12 @@
             <div id="games">
                 <div id="games-slider" class="slider">
                     <div class="slider-img">
-                        <img src="./assets/images/1LinePuzzle/Banner 1024x500-3.jpg" alt="1 Line Puzzle" style="width: 100%;">
+                        <img src="./assets/images/1LinePuzzle/Banner 1024x500-3.png" alt="1 Line Puzzle" style="width: 100%;">
                         <div class="slider-button">
                             <a href="https://play.google.com/store/apps/details?id=com.lta.oneline.puzzle" target="_blank">
                                 <img src="./assets/images/icons/Google-Play-Store-Button.png" alt="Google Play" style="width: 100%;"/>
                             </a>
-                        </div>
-                        
+                        </div>  
                     </div>
                     <div class="slider-img">
                         <img src="./assets/images/CraftRunner/Banner 1024x500-2.jpg" alt="Craft Runner" style="width: 100%;">
@@ -197,7 +195,22 @@
                             </a>
                         </div>
                     </div>
-
+                    <div class="slider-img">
+                        <img src="./assets/images/Pets-Hospital-Simulation/Banner 1024x500-1.png" alt="Pets Hospital Simulation" style="width: 100%;">
+                        <div class="slider-button">
+                            <a href="https://play.google.com/store/apps/details?id=com.lta.pets.hospital.simulation" target="_blank">
+                                <img src="./assets/images/icons/Google-Play-Store-Button.png" alt="Google Play" style="width: 100%;"/>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="slider-img">
+                        <img src="./assets/images/Super-Commando-Platformer/Banner 1024x500-1.png" alt="Super Commando Platformer" style="width: 100%;">
+                        <div class="slider-button">
+                            <a href="https://play.google.com/store/apps/details?id=com.lta.commando" target="_blank">
+                                <img src="./assets/images/icons/Google-Play-Store-Button.png" alt="Google Play" style="width: 100%;"/>
+                            </a>
+                        </div>
+                    </div>
                     <div class="slider-arrow-left">
                         <i class="ti-angle-left"></i>
                     </div>
