Add Paypal Button

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi-VN">
 
 <head>
+    <script src="https://www.paypal.com/bizcomponents/hosted-buttons/sdk.js" async></script>
     <meta name="facebook-domain-verification" content="3dv31kj5lbhne6gv1mmjoskm1fqriz" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="icon" href="https://img1.wsimg.com/isteam/ip/68acfcdc-2dfc-4741-9e81-237beb47bb8d/favicon/2241ed34-4748-4023-8ff0-d876da2363b4.png/:/rs=w:16,h:16,m" sizes="16x16">
@@ -649,6 +650,12 @@
                                 <img src="./assets/images/icons/Google-Play-Store-Button.png" alt="Google Play" style="width: 100%;" />
                             </a>
                         </div>
+                        <div id="paypal-container-PQZRCF9UYL92U"></div>
+                        <script>
+                            paypal.HostedButtons({
+                                hostedButtonId: "PQZRCF9UYL92U",
+                            }).render("#paypal-container-PQZRCF9UYL92U")
+                        </script>
                     </div>
                 </div>
             </div>
