--- a/index.html
+++ b/index.html
@@ -651,11 +651,6 @@
                             </a>
                         </div>
                         <div id="paypal-container-PQZRCF9UYL92U"></div>
-                        <script>
-                            paypal.HostedButtons({
-                                hostedButtonId: "PQZRCF9UYL92U",
-                            }).render("#paypal-container-PQZRCF9UYL92U")
-                        </script>
                     </div>
                 </div>
             </div>
@@ -771,6 +766,19 @@
             }
         }
     </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const interval = setInterval(() => {
+                if (window.paypal && paypal.HostedButtons) {
+                    clearInterval(interval);
+                    paypal.HostedButtons({
+                        hostedButtonId: "PQZRCF9UYL92U",
+                    }).render("#paypal-container-PQZRCF9UYL92U");
+                }
+            }, 300);
+        });
+    </script>
+
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
 
