Update Dino Run Puzzle

--- a/index.html
+++ b/index.html
@@ -543,7 +543,8 @@
                 </a>
 
                 <div class="nav-items">
-                    <a href="#games" class="mobile-menu-nav-item">games</a>
+                    <a href="#steam-games" class="mobile-menu-nav-item">steam games</a>
+                    <a href="#games" class="mobile-menu-nav-item">mobile games</a>
                     <a href="#apps" class="mobile-menu-nav-item">apps</a>
                     <a href="#about" class="mobile-menu-nav-item">about</a>
                     <a href="#contact" class="mobile-menu-nav-item">Contact</a>
@@ -565,26 +566,10 @@
             <div id="steam-games">
                 <div id="steam-games-slider" class="slider">
                     <div class="slider-img">
-                        <img src="./assets/images/CraftRunner/Banner 1024x500-2.jpg" alt="Craft Runner" style="width: 100%;">
+                        <img src="./assets/images/DinoRunPuzzle/Banner 1024x500.png" alt="Dino Run Puzzle" style="width: 100%;">
                         <div class="slider-button">
-                            <a href="https://play.google.com/store/apps/details?id=com.lta.craftrunner.moneyrun3d" target="_blank">
-                                <img src="./assets/images/icons/Google-Play-Store-Button.png" alt="Google Play" style="width: 100%;" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="slider-img">
-                        <img src="./assets/images/Pets-Hospital-Simulation/Banner 1024x500-1.png" alt="Pets Hospital Simulation" style="width: 100%;">
-                        <div class="slider-button">
-                            <a href="https://play.google.com/store/apps/details?id=com.lta.pets.hospital.simulation" target="_blank">
-                                <img src="./assets/images/icons/Google-Play-Store-Button.png" alt="Google Play" style="width: 100%;" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="slider-img">
-                        <img src="./assets/images/Super-Commando-Platformer/Banner 1024x500-1.png" alt="Super Commando Platformer" style="width: 100%;">
-                        <div class="slider-button">
-                            <a href="https://play.google.com/store/apps/details?id=com.lta.commando" target="_blank">
-                                <img src="./assets/images/icons/Google-Play-Store-Button.png" alt="Google Play" style="width: 100%;" />
+                            <a href="https://store.steampowered.com/app/2949070/Dino_Run_Puzzle" target="_blank">
+                                <img src="./assets/images/icons/Steam-Button.png" alt="Steam" style="width: 100%;" />
                             </a>
                         </div>
                     </div>
@@ -599,7 +584,7 @@
 
             <div id="content">
                 <div class="text-center mt-5">
-                    <h1 class="font-large">GAMES</h1>
+                    <h1 class="font-large">MOBILE GAMES</h1>
                     <hr class="hr-sm" />
                 </div>
                 <!-- Games Slider -->
