Add Paypal Button

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="vi-VN">
 
 <head>
+    <script src="https://www.paypal.com/sdk/js?client-id=BAAo_H3zGRqDm9NHThr9tD7w_q3ZWWOl0ch0PLIgMVY98QVM9Nt312r-_R-4ir2n_CezFLgATQeT0xDcT8&components=hosted-buttons&disable-funding=venmo&currency=USD">
+    </script>
     <meta name="facebook-domain-verification" content="3dv31kj5lbhne6gv1mmjoskm1fqriz" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="icon" href="https://img1.wsimg.com/isteam/ip/68acfcdc-2dfc-4741-9e81-237beb47bb8d/favicon/2241ed34-4748-4023-8ff0-d876da2363b4.png/:/rs=w:16,h:16,m" sizes="16x16">
@@ -677,7 +679,12 @@
                         </div>
                     </div>
                 </div>
-
+                <div id="paypal-container-ZYPKR67L6L97S"></div>
+                <script>
+                    paypal.HostedButtons({
+                        hostedButtonId: "ZYPKR67L6L97S",
+                    }).render("#paypal-container-ZYPKR67L6L97S")
+                </script>
                 <!-- Contact section -->
                 <div id="contact">
                     <div class="content-section">
