--- a/index.html
+++ b/index.html
@@ -679,11 +679,14 @@
                         </div>
                     </div>
                 </div>
-                <div id="paypal-container-ZYPKR67L6L97S"></div>
+                <div style="display: flex; justify-content: center;">
+                    <div id="paypal-container-ZYPKR67L6L97S"></div>
+                </div>
+
                 <script>
                     paypal.HostedButtons({
                         hostedButtonId: "ZYPKR67L6L97S",
-                    }).render("#paypal-container-ZYPKR67L6L97S")
+                    }).render("#paypal-container-ZYPKR67L6L97S");
                 </script>
                 <!-- Contact section -->
                 <div id="contact">
