--- a/index.html
+++ b/index.html
@@ -679,8 +679,8 @@
                         </div>
                     </div>
                 </div>
-                <div style="display: flex; justify-content: center;">
-                    <div id="paypal-container-ZYPKR67L6L97S"></div>
+                <div style="display:flex; justify-content:center;">
+                    <div id="paypal-container-ZYPKR67L6L97S" style="max-width:400px; width:100%;"></div>
                 </div>
 
                 <script>
