Update Adsense Key

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <meta name="twitter:description" content="I&#39;m an indie developer. I still work as a hired worker and develop my own products.">
     <meta name="twitter:image" content="https://img1.wsimg.com/isteam/ip/68acfcdc-2dfc-4741-9e81-237beb47bb8d/Icon%20logo%20LTA.png">
     <meta name="twitter:image:alt" content="LTA">
+    <meta name="google-adsense-account" content="ca-pub-9510728989918690">
     <meta name="theme-color" content="#ffffff">\
     <style data-inline-fonts="">
         /* latin-ext */
