--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -598,6 +598,25 @@
                 To detect, prevent and address technical issues.
             </p>
         </div>
+        
+        <div class="box mb-3">
+            <div class="box-help-icon"><i class="ti-help-alt"></i></div>
+            <h3 class="box-title">
+                DOES THE APPLICATION USE GOOGLE OR FACEBOOK LOGIN?
+            </h3>
+            <p class="box-text">
+                This Application allows users to sign in using Google Login and Facebook (Meta) Login for authentication purposes.
+                When you choose to log in using these services, we may receive certain basic profile information from the respective provider.
+            </p>
+            <p class="box-text">
+                This information may include your name, email address, profile picture, and a unique user identifier provided by Google or Meta.
+                We use this information solely to authenticate users and to provide core application functionality.
+            </p>
+            <p class="box-text">
+                We do NOT access your passwords, post on your behalf, track your activity outside the Application,
+                or share your personal data with third parties. All data is handled in accordance with this Privacy Policy.
+            </p>
+        </div>
 
         <div class="box mb-3">
             <div class="box-help-icon"><i class="ti-help-alt"></i></div>
