--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -598,7 +598,7 @@
                 To detect, prevent and address technical issues.
             </p>
         </div>
-        
+
         <div class="box mb-3">
             <div class="box-help-icon"><i class="ti-help-alt"></i></div>
             <h3 class="box-title">
@@ -615,6 +615,11 @@
             <p class="box-text">
                 We do NOT access your passwords, post on your behalf, track your activity outside the Application,
                 or share your personal data with third parties. All data is handled in accordance with this Privacy Policy.
+            </p>
+            <p class="box-text">
+                The Application may also collect basic user information provided by third-party authentication
+                services such as Google Login and Facebook (Meta) Login, including name, email address,
+                profile picture, and a unique user identifier, solely for account authentication and management.
             </p>
         </div>
 
