--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -540,18 +540,19 @@
 
         <div class="box mb-3">
             <div class="box-help-icon"><i class="ti-help-alt"></i></div>
-            <h3 class="box-title">ABOUT LUSTER TO ALIVE STUDIO</h3>
-            <p class="box-text mb-2">
-                LUSTER TO ALIVE STUDIO is the developer, operator and publisher of games, apps mobile, in various platforms and devices. The Company operates, among others, the mobile applications for both Android and IOS of the games: Pets Hospital Simulation, Super
-                Commando, ..., and also the website: https://support.lta-indie.com/
-            </p>
-            <p class="box-text mb-2">
-                LUSTER TO ALIVE STUDIO take the protection of your personal data very seriously and strictly abide by the regulations of the world data protection act. Personal data will only be collected to an extent that is technically required. In no case this data
-                will be sold or passed on to third parties for any other reasons.
-            </p>
-            <p class="box-text">
-                The following declaration gives you an overview on how this protection is guaranteed and which kind of data is collected for which purposes.
-            </p>
+            <h3 class="box-title">ABOUT LUSTER TO ALIVE</h3>
+                <p class="box-text mb-2">
+                    Hey there! I'm a solo indie developer behind LUSTER TO ALIVE. By day, I work a regular job — but nights and weekends? That's when the magic happens. I pour my heart into building games and apps that I genuinely love creating.
+                </p>
+                <p class="box-text mb-2">
+                    So far, I've released mobile games like Pets Hospital Simulation and Super Commando on both Android and iOS. Each project is a labor of love, built from scratch with care and lots of coffee.
+                </p>
+                <p class="box-text mb-2">
+                    I take your privacy seriously — probably more than big companies do. Your data is only collected when absolutely necessary, and I will never sell or share it with anyone. Period.
+                </p>
+                <p class="box-text">
+                    Want to know more about how your data is protected? Keep reading below.
+                </p>
         </div>
 
         <div class="box mb-3">
